# turkish_dict

./: Cargo.toml  README.md
src/: dict.rs  main.rs
