[package]
name = "turkish_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
reqwest = { version = "0.11.15", features = ["blocking","json"] }
serde_json = "1.0.94"
tracing-subscriber = "0.3.16"